namespace WorkflowEngine.Core.Enums;

public enum WorkflowExecutionStatus
{
    Pending = 0,
    Running = 1,
    Completed = 2,
    Failed = 3,
    Cancelled = 4,
    Paused = 5
}

